Added a button flash & sound function

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,10 @@ h1 {
     border: 5px solid black;
     margin: 15px;
 }
-
+.pressed {
+    box-shadow: 0 3px 4px 0 #DBEDF3;
+    opacity: 0.5;
+}
 #green {
     background-color: green;
 }
