Finished Simon Game version 1.0

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ body {
 h1 {
     color: #FEF2BF;
     font-family: press_start_2pregular, sans-serif;
+    margin: 5%;
 }
 .btn {
     color: red;
@@ -32,4 +33,8 @@ h1 {
 .pressed {
     box-shadow: 0 0 20px white;
     background-color: grey;
+}
+.game-over {
+    background-color: red;
+    opacity: 0.8;
 }
